[project]
name = "dsasolverpro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "autogen-agentchat>=0.7.1",
    "autogen-core>=0.7.1",
    "autogen-ext[docker]>=0.7.1",
    "dotenv>=0.9.9",
    "openai>=1.98.0",
    "streamlit>=1.47.1",
    "tiktoken>=0.9.0",
]
