[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsasolverpro"
version = "0.1.0"
description = "DSA Solver Pro - AI-powered Data Structures and Algorithms learning platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core Dependencies
    "python-dotenv>=1.0.0",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "matplotlib>=3.7.1",
    "networkx>=3.1",
    "plotly>=5.13.0",
    
    # Streamlit
    "streamlit>=1.24.0",
    "streamlit-ace>=0.1.1",
    
    # AI/ML
    "openai>=0.28.0",
    "tiktoken>=0.4.0",
    
    # AutoGen
    "autogen-agentchat>=0.7.1",
    "autogen-core>=0.7.1",
    'autogen-ext[docker]>=0.7.1',
    
    # Utilities
    "pyyaml>=6.0.1",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]
